# RL_uav_ws

./: .gitattributes  .gitignore  README.md  msp_bs.py  msp_monitor.py  msp_test.py
assets/: IMG_0233.MOV  IMG_0236.MOV  IMG_0252.HEIC  IMG_0456.MOV
demos/: README.md  demo_simple.py  requirements_sim.txt  sim_controller.py
ese651_project/: .envrc  .gitignore  .gitmodules  README.md  pyproject.toml  test.py
ese651_project/config/: extension.toml
ese651_project/scripts/rsl_rl/: batch_training.sh  play_race.py  train_race.py
ese651_project/src/isaac_quad_sim2real/tasks/race/: __init__.py
ese651_project/src/isaac_quad_sim2real/tasks/race/config/: __init__.py
ese651_project/src/isaac_quad_sim2real/tasks/race/config/crazyflie/: __init__.py  quadcopter_env.py  quadcopter_strategies.py
ese651_project/src/isaac_quad_sim2real/tasks/race/config/crazyflie/agents/: rl_cfg.py  rsl_rl_ppo_cfg.py
ese651_project/src/third_parties/rsl_rl_local/rsl_rl/algorithms/: ppo.py
ese651_project/src/third_parties/rsl_rl_local/rsl_rl/modules/: actor_critic.py
ese651_project/src/third_parties/rsl_rl_local/rsl_rl/runners/: on_policy_runner.py
ese651_project/src/third_parties/rsl_rl_local/rsl_rl/utils/: wandb_fix.py  wandb_utils.py
ese651_project/usd/: cf2x.usda  gate.usda
lib/: .gitignore  README.md  __init__.py
lib/configs/: __init__.py  config_loader.py  presets.py  quad_config.py
lib/controllers/: __init__.py  base_controller.py  rate_controller.py  rate_pid.py
lib/examples/: __init__.py  basic_usage.py  integration_guide.py
lib/mixers/: __init__.py  base_mixer.py  motor_utils.py  quad_mixer.py
lib/outputs/: __init__.py  base_output.py  dshot_output.py  output_utils.py  pwm_output.py
lib/utils/: __init__.py  data_structures.py  math_utils.py  rate_mapping.py
msp_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
msp_py/: msp_test.py  requirements.txt  setup.py
mujoco_sim/: active_simulator.py  rolling_disk_model.xml  simulator_exercise.ipynb  simulator_tutorial.ipynb  utils.py
src/betaflight_msp_bridge/: package.xml  setup.cfg  setup.py
src/betaflight_msp_bridge/betaflight_msp_bridge/: keyboard_teleop.py  msp_bridge.py  safety_gate.py
src/betaflight_msp_bridge/launch/: main.launch.py
src/bf_msp_bridge_cpp/: CMakeLists.txt  package.xml
src/bf_msp_bridge_cpp/include/bf_msp_bridge_cpp/: msp.hpp
src/bf_msp_bridge_cpp/launch/: bf_msp.launch.xml
src/bf_msp_bridge_cpp/src/: msp_bridge.cpp
src/uav_control_cpp/: CMakeLists.txt  package.xml
src/uav_control_cpp/src/: disarm.cpp
src/uav_msp_bridge/: CMakeLists.txt  package.xml
src/uav_msp_bridge/config/: telemetry_params.yaml
src/uav_msp_bridge/include/uav_msp_bridge/: MSPClient.hpp
src/uav_msp_bridge/launch/: manual_telemetry.launch.xml  telemetry.launch.xml  uav.launch.xml
src/uav_msp_bridge/src/: MSPClient.cpp  arming_node.cpp  ibus_tx_node.cpp  launch_node.cpp  telemetry_node.cpp  uros_bridge_node.cpp
src/uav_rl_agent/: CMakeLists.txt  package.xml
src/uav_rl_agent/scripts/: arm.py  disarm.py  flight_vis_node.py  rl_agent_node.py
src/uav_rl_agent/src/: rl_agent_node.cpp  rl_agent_node_cpp.cpp
src/uav_rl_agent/uav_rl_agent/: __init__.py
src/uav_rl_agent/uav_rl_agent_py/: policy.py
src/uav_teleop_node/: CMakeLists.txt  package.xml
test/: ppo.py  quadcopter_strategies.py
uav_0_controller/: README.md  platformio.ini  test_esp.py
uav_0_controller/src/: config.h  crsf_bridge.cpp  crsf_bridge.h  espnow_RX.cpp  espnow_RX.h  espnow_TX.cpp  espnow_TX.h  imu_handler.cpp  imu_handler.h  joystick_handler.cpp  joystick_handler.h  main.cpp  protocol.cpp  protocol.h  protocol_base.h  receiver.cpp  transmitter.cpp  universal_bridge.cpp  universal_bridge.h
uav_0_controller/src/custom/: CRSF.md  crsf_bridge.cpp  crsf_bridge.h  espnow_integration.cpp  lora_integration.cpp  protocol.cpp  protocol.h  wifi_integration.cpp
uav_0_controller/src/elrs/: README.md  elrs_rx.cpp  elrs_rx.h  elrs_tx.cpp  elrs_tx.h
uav_0_controller/test/: crsf_test1.cpp
utils/: README.md  crsf_live.py  crsf_serial.py  drone_visualizer.py  ibus_serial.py  requirements.txt  run_crsf_decoder.bat  run_crsf_decoder.sh  sbus_serial.py
utils/protocols/: __init__.py  crsf_decoder.py  ibus_decoder.py  ppm_decoder.py  sbus_decoder.py
