<?xml version="1.0"?>
<package format="3">
  <name>bf_msp_bridge_cpp</name>
  <version>0.1.0</version>
  <description>Betaflight MSP ↔ ROS 2 bridge (C++)</description>

  <maintainer email="kartik8virmani@gmail.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
