<?xml version="1.0"?>
<package format="3">
  <name>uav_rl_agent</name>
  <version>0.0.1</version>
  <description>Hybrid package with C++ and Python RL agent nodes.</description>

  <maintainer email="kvirmani@seas.upenn.edu">Kartik Virmani</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>